create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -67,7 +67,7 @@
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Привет! Вам нужен профессиональный диктор?&nbsp;</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">Озвучание рекламных роликов, аудиокниг, IVR, различных презентаций и многое другое.<br>Чтобы узнать подробнее листайте ниже. Или можете для начала послушать демо</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Озвучание рекламных роликов, аудиокниг, IVR, различных презентаций и многое другое.<br>Чтобы узнать подробнее листайте ниже. &nbsp;Для начала можете прослушать демо</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html">Демо</a></div>
             </div>
@@ -85,7 +85,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>ЛЕГКОСТЬ И ПРОСТОТА</strong><span style="font-size: 1rem;">&nbsp;- Сделать заказ легко и просто написав на <a href="mailto:serzh_alaev@mail.ru">Эл.почту</a>. Хронометраж вашего текста вы можете узнать перейдя <a href="http://hronomer.ru" target="_blank">сюда</a></span></li><li><strong>СКОРОСТЬ ВЫПОЛНЕНИЯ </strong>- выполнения большинства заказов, где размер текста не превышает 30сек происходит за 1ч</li><li><strong>КАЧЕСТВО </strong>- запись производится в студийных условиях на профессиональном оборудовании</li>
+                    <li><strong>ЛЕГКОСТЬ И ПРОСТОТА</strong><span style="font-size: 1rem;">&nbsp;- сделать заказ легко и просто написав на <a href="mailto:serzh_alaev@mail.ru">Эл.почту</a>. Хронометраж вашего текста вы можете узнать перейдя <a href="http://hronomer.ru" target="_blank">сюда</a></span></li><li><strong>СКОРОСТЬ ВЫПОЛНЕНИЯ </strong>- выполнения большинства заказов, где размер текста не превышает 30сек происходит за 1ч</li><li><strong>КАЧЕСТВО </strong>- запись производится в студийных условиях на профессиональном оборудовании</li>
                 </ol>
             </div>
         </div>
@@ -181,7 +181,7 @@
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">
-                                К этой категории относятся презентации, обучающие тексты, инструкций, все что не вошло в первые четыре категории</p>
+                                К этой категории относятся презентации, обучающие тексты, инструкции, все что не вошло в первые четыре категории</p>
                         </div>
                     </div>
                 </div>
