--- a/DemoAudio.html
+++ b/DemoAudio.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-7" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 4.5rem; padding-bottom: 0rem;">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-7" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 4.5rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row mbr-section__container--first">
             <div class=" addons-container-inner">
@@ -142,7 +142,7 @@
     
     
     <figure class="mbr-figure align-center container">
-        <div class="video-block" style="width: 49%;">
+        <div class="video-block" style="width: 51%;">
             <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/h6BLd5iLisg?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
