--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jKp4EWi7xnEmE9CH3LnfHLVxa67C2c9QzxpjJu+Fr+RKtu4fkQ48DPYuesIMGahfmpXS6sdRJYXwelJVWupEg3sVv52u8oFGcaXqpqzly3qbxf8dUj+VNY+IgkVbhu+5">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5Z3S1x5fp4HshN3VJ1ZQPL5Pw2Z2Dz90VBCyZWx+/iz+EmTJGW9x/jBYR5YI/GxVC+0qNHdWr9NwzNDr545E7vLxx0+0R/R/2jfrCOVrYiy1N+LXjjA6kKWpOm64b+rd">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -260,7 +260,7 @@
      
 
     <div class="container">
-        <div class="inner-container" style="width: 74%;">
+        <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 28%;">
             <div class="section-text align-center mbr-fonts-style display-5">
                     Так же вы можете связаться со мной в скайпе или на vk.ru</div>
