create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LqaV4ZGfwG58Pi0UDsEgVR7OQ1sifbwqsFr15Ef9+YqKfpW7a5oAldeV3sVJZ6LhDZ212FgJ+GlAv4C1DMSI1ddqt7URfCPxO4Fx94dqOxQyYllLybb4nYtiu5uFMUeO">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EW7E26+V12QZhPGbqjnkU+a5SamQ7f9jtG7Iw8UI8ZKKo4NlOWRY5lyFdImu2nETWS31XAU1hDLQ0GZgO94VqUep4r8g75eHDnQownMJNjHaAg9Z09K4WE3s7GUP0cs6">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -289,9 +289,7 @@
                         <span class="btn btn-social twitter socicon-bg-twitter mx-2" title="Поделиться в Twitter">
                             <i class="socicon socicon-twitter"></i>
                         </span>
-                        <span class="btn btn-social plusone socicon-bg-googleplus mx-2" title="Поделиться в Google+">
-                            <i class="socicon socicon-googleplus"></i>
-                        </span>
+                        
                         <span class="btn btn-social vkontakte socicon-bg-vkontakte mx-2" title="Поделиться в VK">
                             <i class="socicon socicon-vkontakte"></i>
                         </span>
