create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3uHidS09epbx6MdlMSgbqLLT+ASZVAlymQu5dDXyWtAXsT0RUvvsfBtrd5HibS6HUAqJ05uvJ0SEnRLkbIilmCXNXwNszGcm91uTvtXvGkweC/kyI/+R6vHZfwL2wRgO">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ogaizdUdVAkmsmTOLj1tsyTRpNpJve36gATL+lAEr1w4wUDSWe+KCCFvSCnMaHvqmp9FjhC5llSAOAK+HQWokVT0TfC6NRZ/AaP1taEw9BgRrWkXyIY6TrRinvzdOdGS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
