--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -132,7 +132,7 @@
                                 300р</p>
                         </div>
                         <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">Сведение звуковой дорожки с видео +25%<br>Если размер видео превышает 5 минут, цена за 1 минуту - 200р</p>
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">Сведение звуковой дорожки с видео +25%<br>Если размер видео превышает 5 минут, цена за 30сек - 200р</p>
                         </div>
                     </div>
                 </div>
@@ -160,9 +160,8 @@
                     <div class="card-box">
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">
-                                Озвучание аудиокниги (цена за 1ч готовой записи )</h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-5">
-                                1400р</p>
+                                Озвучание аудиокниги (1 лист А4, 12 шрифтом )</h4>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-5">500р</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">Если нужно музыкально-звуковое оформление +50%&nbsp;</p>
@@ -222,7 +221,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EHqFJXD11vz28Ug3lh5Pg6N+xjSvdQKeZCjGrdSsVbPTyIlAIvP9Vt0UPdboFPMp3ztGovZbt2aRiSYH999LKrQP4ZRhXy08U8Cj47kTrBwj9sgHOYeLIe4hOqJj3V+6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lFbVZO9OGk65UOCZ32cXuFcFXq2uiV8XdV0bkS1zmYIxfxmK+HnEUaRU1GNj20Y2upfgTE122H4kokqQumV0OQPEDGCt1qtAthw1+KdZjhPVChTrPOUwNH+oLpglaZWR">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
