create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -221,7 +221,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lFbVZO9OGk65UOCZ32cXuFcFXq2uiV8XdV0bkS1zmYIxfxmK+HnEUaRU1GNj20Y2upfgTE122H4kokqQumV0OQPEDGCt1qtAthw1+KdZjhPVChTrPOUwNH+oLpglaZWR">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I44VWA+rFo3E7InvZTN022pWjast1DPyWWBtWntAqeATomPkQNuEN5EGAqQPaPicDWqk7D6712kTJh9td+4JX/ZTDWHby9GiERNja14FjhzBHvhiqkpZdB+cr55kOCBs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
