create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -221,7 +221,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SKnssijtvQANQHcLoJmBFgc/ET/hDxuSvPMtBBf+WVr50J6loNVlycsJC1eOBRSm6UVw2TUgoEOfdpagrM+uK4o6sMSoRnkBQjUzGhhoZMkol8/uLfq1PKc8+Q+svl5m">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DzlWY1Vz1y2uldkdisalikuzXmXvolxI82YeeXKnR/rpumR+6Wqg1nZFRewc8oOEKK//S7CMUwm2teta6njmRF525l9ilLIkGpFkDFJhMwYAK0vUattxykM+cIpAw6H+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
