--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -68,9 +68,9 @@
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Привет! Вам нужен профессиональный диктор?&nbsp;</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">Озвучание рекламных роликов, аудиокниг, IVR, различных презентаций и многое другое.<br>Чтобы узнать подробнее листайте ниже. &nbsp;Для начала можете прослушать демо</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Озвучание рекламных роликов, аудиокниг, IVR, различных презентаций и многое другое.<br>Чтобы узнать подробнее листайте ниже. &nbsp;Для начала можете прослушать демо. Так же создаю музыкально звуковое оформление</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html">Демо</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html">Диктор</a> <a class="btn btn-md btn-white display-5" href="Sound Design.html">Саунд Дизайн</a></div>
             </div>
 
             <div class="mbr-figure" style="width: 110%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ETnXtOTOABM?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p02ib1yXzXZldgA6TlyYia8YPz4y2G1tsLjcjl1XrJqr9GHpqEbJuOJgF2dyB9OWyOM6w8kSKloJ0P27wXXrAhv4L9RXVRg5HPpD4FsAdnr+vztFwrmoM9aul7ZKszCG">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BGOjf/F6ljR5/5DAv5tm4SyVWNPEDBH8V2hEPEXtjRNb+s4hGwpr6dVf01qG+0UJeu4hM3zOwwjUoeKNEl3J99PS0H5s9rdG1tNxzuon+WYwb/NLGVL7H52Xt/0BjjPt">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
