create github pages

--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BGOjf/F6ljR5/5DAv5tm4SyVWNPEDBH8V2hEPEXtjRNb+s4hGwpr6dVf01qG+0UJeu4hM3zOwwjUoeKNEl3J99PS0H5s9rdG1tNxzuon+WYwb/NLGVL7H52Xt/0BjjPt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D7jKzntJHLJObLUYZcwgoguoD13mcwcHv7WzBU2UrjJ/YhB65+tWwJ77+E+8kfglXi0w3UwABOYdbNFcOOfD33+sRZVUXT0U5X0fTOyn9AxM2Q+UeGBvGqrRMeU7VoxU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
