--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0Cri8hF1PehIe96i73rBORlhhC9J05Hpe2qEXPa4N7TDzLcSkb8l8mFv+NoWKIdO/3fDJ6HysyjfVvR2nF/0YNrT6sYpzpM052xqt3JmAzR3RKoGgyaYZWoFoumLC6G5">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zbpcyibR8NieOjb5BswasnYJ/MfSxYP3HbhMI8wDa6NQBJwnSiRcLT1zpxkUBADfNeTgogm3NfiaB6MUlcvNvn3YKUcJv372Cq72FKMW0VzvyR0FMOzyFOeVvf/it6fD">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
