create github pages

--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Это страница диктора Сергея Алаева. 
 Если вам нужен рекламный ролик, озвучить видео или  записать аудиокнигу, автоответчик, IVR вам нужно оставить заявку в поле обратной связи">
   
-  <title>Диктор Сергей Алаев</title>
+  <title>DiktorAlaeff</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zWb1kR4qw7vdkYDhyxnuu6S2VauaYK0GYuUnvh3hrpqYLdfJ4iVxshIQt7O1mLmaA38uJpfLlvmSNtpD3L8Sdc8P0sfvgSAwKb9Vl/PJx31dvJk+i2TaKwO3mtgpEtf/">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i7SILmbnhEsW7G/Toevaw/o24Caw/c4+gx48tujJvlEPpMnNrhN+xXPuRUrIfwJH4bjFlX8jl8f4OM9S9iR9hssu/rCZnAfmrv1Rd9EbJ9fEjJuHC9J6Lsd8JCtbA+SI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
