--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -73,7 +73,7 @@
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html">Диктор</a> <a class="btn btn-md btn-white display-5" href="SoundDesign.html">Звуковой дизайн</a></div>
             </div>
 
-            <div class="mbr-figure" style="width: 110%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ETnXtOTOABM?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div class="mbr-figure" style="width: 105%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ETnXtOTOABM?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
     </div>
@@ -220,7 +220,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t2laU2jTcOKGxsIyP+BL3TXMm1Sp/UyTjaeCkk4nWs142u+KY4GNCJp+fsJ/1KYcuh7//1p6Ck3eMj1ZBlL7PMEwPJ+OiIlZwxBZ7mWSknSU8Tq2afYW9C8eg1Tmy/Pz">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XVYqndZ9jmKgq20FjWgyDnRv44mWVluU8dAPtTpN7p7DYDCEaEs85KU9hHQRAYeRYkLmS+98YEhYL59NqXRCU9fjYtFYlfPtaSzjXCIFrGhot4Hyjycpx1o6idDuDWPF">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
