--- a/SoundDesign.html
+++ b/SoundDesign.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="cid-rvWP9xaEbd" id="video2-3">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-rvWP9xaEbd" id="video2-3">
 
     
     
@@ -110,7 +110,7 @@
     </figure>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-9" data-rv-view="70" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-9" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row mbr-section__container--first">
             <div class=" addons-container-inner">
@@ -122,7 +122,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-a" data-rv-view="72" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-a" data-rv-view="82" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row mbr-section__container--last">
             <div class=" addons-container-inner">
