create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -220,7 +220,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s1Q/nBjlPGx503aDfmGxVU8RDy8IVYyFiG+ls6NCLYndkuAGxwryiCev3xmIKtMsBizW/HftzYg8LvRO48LA7vYTgJ2rDVJIq5nUtLjlp240SJ3a3cKAamJw8GelOuYO">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="apcT49w6JndR1lDtfBqBvMpH67B1KhiltTSxYYaO+AbuwRrTZUYD9MIa7tGfbq0uszH2rKJVpv1r8eIuDgmIT5Se4NFkp2F+EIPhYHeqSyGY5Srs7EL7s1NagUkG10Qx">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
